<resources>
    <string name="app_name">TMDb</string>
    <string name="open_drawer">open drawer</string>
    <string name="name">name</string>
    <string name="family">family</string>
    <string name="age">age</string>
    <string name="address">email address</string>
    <string name="save">save</string>
    <string name="dial_number">Dial number</string>
    <string name="ok">ok</string>
    <string name="edit">edit</string>
    <string name="welcome">Welcome :)</string>
    <string name="email">email</string>
    <string name="enter_city_name">Please enter the city name</string>
    <string name="fajr">Fajr:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="dhuhr">Dhuhr:</string>
    <string name="asr">Asr:</string>
    <string name="sunset">Sunset:</string>
    <string name="maghrib">Maghrib:</string>
    <string name="isha">Isha</string>
    <string name="imsak">Imsak:</string>
    <string name="midnight">Midnight:</string>
    <string name="search_tmdb">Search TMDb</string>
    <string name="nothing" />
    <string name="release_date">Release Date:</string>
    <string name="synopsis">Synopsis:</string>
</resources>
